# kajovomail

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  requirements.txt
.github/workflows/: ci.yml  deploy.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/app/: main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_ai.py  test_api_contract.py  test_auth.py  test_config.py  test_health.py  test_offers.py  test_search.py
desktop/: .gitignore  README.md  main.py  pyproject.toml
desktop/app/: main.py  models.py
desktop/app/events/: stream_worker.py
desktop/app/services/: api_client.py  session_manager.py
desktop/app/ui/: login_dialog.py  main_window.py
desktop/scripts/: build_macos.sh  build_windows.bat
desktop/tests/: test_main_window.py
docs/: Architecture.md  BootstrapStatus.md  Deployment.md  KajovoMailZadaniDraft.md  KajovoMailZadaniFinal.md  MailPrompty.txt  Mainbook.txt  ManifestDesignKájovo.md  Security.md  TestMatrix.md  openapi.json
infra/: docker-compose.dev.yml  docker-compose.prod.yml  release-gate.sh
kajovomail/: __init__.py  __main__.py
scripts/: build_kajovomail_exe.ps1  check-docs.sh  deploy.sh  migrate.sh  prepare_brand_assets.ps1  release-gate.sh  run-pytest.bat  run-pytest.ps1  run-tests.sh  run_manual_auth_test.py  write_deploy.py
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
(+80 files in other folders)
