[project]
name = "kajovomail-desktop"
version = "0.1.0"
description = "KajovoMail desktop client built with PySide6."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.6.2",
    "httpx>=0.26.0",
    "websockets>=11.0",
    "keyring>=24.3",
    "python-dotenv>=1.0.0",
    "pyinstaller>=5.12",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["desktop.app"]
